added courses page, about us page, made mobile friendly

--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "embla-carousel-react": "^8.1.5",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.387.0",
-    "next": "14.2.3",
+    "next": "^14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.14.5",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
